# conforme

./: .conformerc.toml  .gitignore  .mcp.example.json  .releaserc  .rules  .version-hook.sh  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md
.amazonq/rules/: adapter-consistency.md  rust-conventions.md  testing.md
.amp/: settings.json
.claude/rules/: adapter-consistency.md  rust-conventions.md  testing.md
.continue/rules/: adapter-consistency.md  general.md  rust-conventions.md  testing.md
.cursor/rules/: adapter-consistency.mdc  general.mdc  rust-conventions.mdc  testing.mdc
.gemini/: settings.json
.github/: copilot-instructions.md
.github/instructions/: adapter-consistency.instructions.md  rust-conventions.instructions.md  testing.instructions.md
.github/prompts/: verify-providers.prompt.md
.github/workflows/: ci.yml  release.yml
.kiro/steering/: adapter-consistency.md  general.md  rust-conventions.md  testing.md
.roo/rules/: 00-general.md  01-adapter-consistency.md  02-rust-conventions.md  03-testing.md
.windsurf/: mcp.json
.windsurf/rules/: adapter-consistency.md  general.md  rust-conventions.md  testing.md
.zed/: settings.json
docs/providers/: amazonq.md  amp.md  claude-code.md  codex.md  continuedev.md  copilot.md  cursor.md  gemini.md  kiro.md  opencode.md  roocode.md  windsurf.md  (+1 more)
src/: cli.rs  config.rs  detect.rs  frontmatter.rs  gitignore.rs  hash.rs  help_ai.rs  hook.rs  lib.rs  main.rs  markdown.rs  mcp.rs  project_config.rs  skills.rs  sync.rs  validate.rs  watch.rs
tests/: error_cases.rs  integration.rs  roundtrip.rs
(+17 files in other folders)
