[package]
name = "conforme"
version = "1.0.0"
edition = "2021"
description = "Universal AI coding agent config synchronization"
license = "MIT"
repository = "https://github.com/maxgfr/conforme"

[[bin]]
name = "conforme"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
gray_matter = "0.3"
globset = "0.4"
walkdir = "2"
anyhow = "1"
thiserror = "2"
sha2 = "0.10"
owo-colors = "4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
panic = "abort"
strip = true
lto = true
codegen-units = 1
