[package]
name = "conforme"
version = "1.5.1"
edition = "2021"
description = "Universal AI coding agent config synchronization"
license = "MIT"
repository = "https://github.com/maxgfr/conforme"

[[bin]]
name = "conforme"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
toml = "0.8"
gray_matter = "0.3"
globset = "0.4"
anyhow = "1"
sha2 = "0.10"
owo-colors = "4"
similar = "2"
notify = { version = "7", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
panic = "abort"
strip = true
lto = true
codegen-units = 1
